--- a/themes/custom/index.html
+++ b/themes/custom/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <small>© <span class="year"></span> {{ config.meta.author }}</small>
+        <small>Copyright <span class="year"></span> {{ config.meta.author }}</small>
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
